Fix: Gradient hero right align bug (#879)
* fix: updated gradient hero body flexbox to column alignment

* chore: compile css

--- a/docroot/themes/humsci/humsci_basic/src/scss/components/_pattern.gradient-hero.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/components/_pattern.gradient-hero.scss
@@ -57,6 +57,11 @@
         justify-content: flex-end;
         text-align: right;
       }
+
+      .field-hs-gradient-hero-body {
+        flex-direction: column;
+        align-items: flex-end;
+      }
     }
 
     .field-hs-gradient-hero-body p {
